derive/tests/snapshots/wrapper_created_uuid/License/get_all_licenses.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `license` table.
    pub fn get_all_licenses<'a>(&'a self) -> impl Iterator<Item = License> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().license().iter()
    }
}
